# tokuin

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  HIERATIC_FORMAT.md  PRICING_TEMPLATE.toml  README.md  contexts.toml  install.ps1  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: README.md  convert-model-venv.sh  convert-model.py  install-optimum.sh  setup-onnx-model.sh
src/: cli.rs  error.rs  lib.rs  main.rs
src/analyzers/: duplicates.rs  mod.rs  scanner.rs  types.rs
src/compression/: compressor.rs  context_library.rs  embeddings.rs  hieratic_decoder.rs  hieratic_encoder.rs  llm_judge.rs  mod.rs  parser.rs  pattern_extractor.rs  quality.rs  similarity.rs  types.rs
src/http/: client.rs
src/http/providers/: anthropic.rs  generic.rs  openai.rs  openrouter.rs
src/models/: pricing.rs  registry.rs
src/output/: insights.rs  markdown.rs
src/simulator/: mod.rs  simulator.rs
src/tokenizers/: openai.rs  trait_impl.rs
src/utils/: markdown.rs
tests/: integration_analyze.rs  unit_analyzers.rs
tests/compression_benchmark/: .gitignore  README.md  collect_metrics.py  collect_prompts.py  generate_report.py  pyproject.toml  requirements.txt  run_benchmark.py
tests/compression_benchmark/prompts/: METADATA.md
tests/compression_benchmark/prompts/conversations/: multi_turn.txt
tests/compression_benchmark/prompts/instructions/: data_extraction.txt  data_extraction.txt.hieratic
tests/compression_benchmark/prompts/mixed/: complex_task.txt
tests/compression_benchmark/prompts/structured/: json_schema.txt
tests/compression_benchmark/prompts/technical/: api_documentation.txt
