[project]
name = "compression-benchmark"
version = "0.1.0"
description = "Benchmark suite for prompt compression testing"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tabulate>=0.9.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
